try to addd filter

--- a/templates/client/show_all.html.twig
+++ b/templates/client/show_all.html.twig
@@ -6,69 +6,82 @@
     {% include 'layout/navbar.html.twig' %}
     <div class="container-fluid mb-100">
             <h1 >Clients</h1>
-            <table class="table">
-                <thead>
-                    <tr class='table_head'>
-                        <th>Date</th>
-                        <th>Personne</th>
-                        <th>Nom</th>
-                        <th>Prenom</th>
-                        <th>Télephone</th>
-                        <th>Marque</th>
-                        <th>Modele</th>
-                        <th>Numero de serie</th>
-                        <th>Mot de passe</th>
-                        <th>Chargeur</th>
-                        <th>Etat</th>
-                        <th>Actions</th>
-                    </tr>
-                </thead>
-                <tbody>
-            
-                {% for client in clients | sort((a, b) => b.date <=> a.date) %}
-                    {% set counter = ( counter | default(0) ) + 1 %}
-                    {% if counter % 2 %}
-                        <tr class='tr_no_color select'>
-                    {% else %}
-                        <tr class='tr_color  select'>
-                    {% endif %}
-                        <td>{{ client.date|date('D d M Y H:i')|format_datetime('full',locale='fr') }}</td>
-                        <td>{{ client.personne }}</td>
-                        <td>{{ client.nom }}</td>
-                        <td>{{ client.prenom }}</td>
-                        <td>{{ client.tel }} </td>
-                        <td>{{ client.appareil.marque }} </td>
-                        <td>{{ client.appareil.modele }} </td>
-                        <td>{{ client.appareil.ns }} </td>
-                        <td>{{ client.appareil.mdp }} </td>
-                        {% if client.appareil.chargeur == 1 %}
-                        <td> <img  class='check' src="{{asset('./images/check.png')}}" width="40px"/></td>
-                        {% else %}
-                        <td>  <img  class='cross' src="{{asset('./images/cross.png')}}" width="40px"/></td>
-                        {% endif %}
-                        {% if client.appareil.editeur.etat.statut is defined %}
-                        <td>{{ client.appareil.editeur.etat.statut}}</td>
-                        {% else %}
-                        <td>  </td>
-                        {% endif %}
-                        
+            <div class="row mt-5">
+                <div class="col" style="max-width: 300px !important">
+                    <div class="card" >
+                        <div class="card-body">
+                        <h5 class="card-title">Filtrer</h5>
+                        {{ include('client/_filtre_form.html.twig') }}
+                    </div>
+                </div>
+                </div>
+                <div class="col" style="">
+                    <table class="table">
+                        <thead>
+                            <tr class='table_head'>
+                                <th>Date</th>
+                                <th>Personne</th>
+                                <th>Nom</th>
+                                <th>Prenom</th>
+                                <th>Télephone</th>
+                                <th>Marque</th>
+                                <th>Modele</th>
+                                <th>Numero de serie</th>
+                                <th>Mot de passe</th>
+                                <th>Chargeur</th>
+                                <th>Etat</th>
+                                <th>Actions</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                    
+                        {% for client in clients | sort((a, b) => b.date <=> a.date) %}
+                            {% set counter = ( counter | default(0) ) + 1 %}
+                            {% if counter % 2 %}
+                                <tr class='tr_no_color select'>
+                            {% else %}
+                                <tr class='tr_color  select'>
+                            {% endif %}
+                                <td>{{ client.date|date('D d M Y H:i')|format_datetime('full','short',locale='fr') }}</td>
+                                <td>{{ client.personne }}</td>
+                                <td>{{ client.nom }}</td>
+                                <td>{{ client.prenom }}</td>
+                                <td>{{ client.tel }} </td>
+                                <td>{{ client.appareil.marque }} </td>
+                                <td>{{ client.appareil.modele }} </td>
+                                <td>{{ client.appareil.ns }} </td>
+                                <td>{{ client.appareil.mdp }} </td>
+                                {% if client.appareil.chargeur == 1 %}
+                                <td> <img  class='check' src="{{asset('./images/check.png')}}" width="40px"/></td>
+                                {% else %}
+                                <td>  <img  class='cross' src="{{asset('./images/cross.png')}}" width="40px"/></td>
+                                {% endif %}
+                                {% if client.appareil.editeur.etat.statut is defined %}
+                                <td>{{ client.appareil.editeur.etat.statut}}</td>
+                                {% else %}
+                                <td>  </td>
+                                {% endif %}
+                                
 
-                        <td class="td-button mw-250">
-                            <a class="btn btn-success" href="{{ path('client_show', {'id': client.id}) }}"><img class="show" width='25px' src="{{asset('./images/icon-afficher.png')}}"/></a>
-                            <a class="btn btn-secondary" href="{{ path('client_edit', {'id': client.id}) }}"><img class="edit" width='25px' src="{{asset('./images/icon-edit.png')}}"/></a>
-                            <a class="btn btn-info" href="{{ path('client_clone', {'id': client.id}) }}"><img class="edit" width='25px' src="{{asset('./images/icon-cloner.png')}}"/></a>
-                            {{ include('client/_delete_form.html.twig') }}
-                        </td>
-                    </tr>
-                {% else %}
-                    <tr>
-                        <td colspan="12" class='white'>En attente de clients...</td>
-                    </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
+                                <td class="td-button mw-250">
+                                    <a class="btn btn-success" href="{{ path('client_show', {'id': client.id}) }}"><img class="show" width='25px' src="{{asset('./images/icon-afficher.png')}}"/></a>
+                                    <a class="btn btn-secondary" href="{{ path('client_edit', {'id': client.id}) }}"><img class="edit" width='25px' src="{{asset('./images/icon-edit.png')}}"/></a>
+                                    <a class="btn btn-info" href="{{ path('client_clone', {'id': client.id}) }}"><img class="edit" width='25px' src="{{asset('./images/icon-cloner.png')}}"/></a>
+                                    {{ include('client/_delete_form.html.twig') }}
+                                </td>
+                            </tr>
+                        {% else %}
+                            <tr>
+                                <td colspan="12" class='white'>En attente de clients...</td>
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
 
-            <a  class="btn btn-success" href="{{ path('client_new') }}"><img class="delete" width='28px' src="{{asset('/images/icon-add.png')}}"/></a>
-        </div>
+                    <a  class="btn btn-success" href="{{ path('client_new') }}"><img class="delete" width='28px' src="{{asset('/images/icon-add.png')}}"/></a>
+                </div>
+                </div>
+                
+            </div>
     {% include 'layout/footer.html.twig' %}
 {% endblock %}
