--- a/templates/appel/edit.html.twig
+++ b/templates/appel/edit.html.twig
@@ -12,7 +12,7 @@
         <div class="container">
                 
                 <h1>Modifier la demande d'appel</h1>
-                <div class="card p-50  mt-5 cardCall">
+                <div class="card p-50  mt-5 cardCallNew">
                     {{ include('appel/_form.html.twig') }}
                 </div> 
                 <div class="loading" id="loadingCall">
