--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -40,6 +40,7 @@
             <script type="text/javascript" src='{{asset('js/public/loaderCall.js')}}'></script>
             <script type="text/javascript" src='{{asset('js/public/loader.js')}}'></script>
             <script type="text/javascript" src='{{asset('js/interne/alert.js')}}'></script>
+            <script type="text/javascript" src='{{asset('js/interne/filtreMonth.js')}}'></script>
     
         {% endblock %}
     </head>
