--- a/templates/client/show_all.html.twig
+++ b/templates/client/show_all.html.twig
@@ -11,11 +11,24 @@
                     <div class="card" >
                         <div class="card-body">
                         <h5 class="card-title">Filtrer</h5>
-                        {{ include('client/_filtre_form.html.twig') }}
+                        <div class="accordion accordion-flush" id="accordionFlushExample">
+                        <div class="accordion-item">
+                                <h2 class="accordion-header" id="flush-headingOne">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                                    Mois
+                                </button>
+                                </h2>
+                                <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                                    <div class="accordion-body">
+                                        {{ include('client/_filtre_form.html.twig') }}
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 </div>
-                <div class="col" style="">
+                <div class="col allClients" style="">
                     <table class="table">
                         <thead>
                             <tr class='table_head'>
@@ -81,7 +94,7 @@
                     <a  class="btn btn-success" href="{{ path('client_new') }}"><img class="delete" width='28px' src="{{asset('/images/icon-add.png')}}"/></a>
                 </div>
                 </div>
-                
+                <div class='loaderAllClients'> {{ include('layout/loader.html.twig') }} </div>
             </div>
     {% include 'layout/footer.html.twig' %}
 {% endblock %}
