--- a/templates/client/_filtre_form.html.twig
+++ b/templates/client/_filtre_form.html.twig
@@ -1,52 +1,54 @@
-<form method="post" action="{{ path('client_show_all')}}">
-    <h6>Mois</h6>
-    <div>
-        <input type="checkbox" id="janvier" name="janvier"  value="01" {{janvierCheked}}>
-        <label for="janvier">Janvier</label>
-    </div>
-    <div>
-        <input type="checkbox" id="fevrier" name="fevrier"  value="02" checked>
-        <label for="fevrier">Février</label>
-    </div>
-    <div>
-        <input type="checkbox" id="mars" name="mars"  value="03" checked>
-        <label for="mars">Mars</label>
-    </div>
-    <div>
-        <input type="checkbox" id="avril" name="avril"  value="04" checked>
-        <label for="avril">Avril</label>
-    </div>
-    <div>
-        <input type="checkbox" id="mai" name="mai"  value="05" checked>
-        <label for="mai">Mai</label>
-    </div>
-    <div>
-        <input type="checkbox" id="juin" name="juin"  value="06" checked>
-        <label for="juin">Juin</label>
-    </div>
-    <div>
-        <input type="checkbox" id="juillet" name="juillet"  value="07" checked>
-        <label for="avril">Juillet</label>
-    </div>
-    <div>
-        <input type="checkbox" id="aout" name="aout"  value="08" checked>
-        <label for="aout">Août</label>
-    </div>
-    <div>
-        <input type="checkbox" id="septembre" name="septembre"  value="09" checked>
-        <label for="septembre">Septembre</label>
-    </div>
-    <div>
-        <input type="checkbox" id="octobre" name="octobre"  value="10" checked>
-        <label for="octobre">Octobre</label>
-    </div>
-    <div>
-        <input type="checkbox" id="novembre" name="novembre"  value="11" checked>
-        <label for="novembre">Novembrbe</label>
-    </div>
-    <div>
-        <input type="checkbox" id="decembre" name="decembre"  value="12" checked>
-        <label for="decembre">Décembre</label>
-    </div>
-    <button class='btn' type="submit"> valider </button>
-</form>
+ <form method="post" action="{{ path('client_show_all')}}" id="filtreMonth">
+        <div>
+            <input type="checkbox" id="janvier" name="janvier"  value="01" {{checkds['janvier']}}>
+            <label for="janvier">Janvier</label>
+        </div>
+        <div>
+            <input type="checkbox" id="fevrier" name="fevrier"  value="02" {{checkds['fevrier']}}>
+            <label for="fevrier">Février</label>
+        </div>
+        <div>
+            <input type="checkbox" id="mars" name="mars"  value="03" {{checkds['mars']}}>
+            <label for="mars">Mars</label>
+        </div>
+        <div>
+            <input type="checkbox" id="avril" name="avril"  value="04" {{checkds['avril']}}>
+            <label for="avril">Avril</label>
+        </div>
+        <div>
+            <input type="checkbox" id="mai" name="mai"  value="05" {{checkds['mai']}}>
+            <label for="mai">Mai</label>
+        </div>
+        <div>
+            <input type="checkbox" id="juin" name="juin"  value="06" {{checkds['juin']}}>
+            <label for="juin">Juin</label>
+        </div>
+        <div>
+            <input type="checkbox" id="juillet" name="juillet"  value="07" {{checkds['juillet']}}>
+            <label for="avril">Juillet</label>
+        </div>
+        <div>
+            <input type="checkbox" id="aout" name="aout"  value="08" {{checkds['aout']}}>
+            <label for="aout">Août</label>
+        </div>
+        <div>
+            <input type="checkbox" id="septembre" name="septembre"  value="09" {{checkds['septembre']}}>
+            <label for="septembre">Septembre</label>
+        </div>
+        <div>
+            <input type="checkbox" id="octobre" name="octobre"  value="10" {{checkds['octobre']}}>
+            <label for="octobre">Octobre</label>
+        </div>
+        <div>
+            <input type="checkbox" id="novembre" name="novembre"  value="11" {{checkds['novembre']}}>
+            <label for="novembre">Novembrbe</label>
+        </div>
+        <div>
+            <input type="checkbox" id="decembre" name="decembre"  value="12" {{checkds['decembre']}}>
+            <label for="decembre">Décembre</label>
+        </div>
+        <div class="center mt-4">
+            <button class="btn btn-primary m-auto"> Valider</button>
+        </div>
+        
+    </form>
