--- a/templates/emails/confirmation_rdv.html.twig
+++ b/templates/emails/confirmation_rdv.html.twig
@@ -13,14 +13,4 @@
 <p>
     Si vous souhaitez annuler ou modifier cette intervention merci de vous rendre sur ce <a href="https://site-interne.alwaysdata.net/rdv/public/{{id}}"  target="_blank">lien</a> ou nous contacter le plus rapidement possible au 01.34.15.52.32
 </p>
---------------------------------
-</p>
-<p>
-AZERTY Solutions Informatiques
-</p>
-<p>
-38 rue de la station 95130, Franconville
-</p>
-<p>
-01.34.15.52.32
-</p>
+{% include 'emails/layout/footer.html.twig' %}
