--- a/templates/emails/mailDepot.html.twig
+++ b/templates/emails/mailDepot.html.twig
@@ -19,15 +19,4 @@ chaque points d'avancements liés à votre appareil.
 <p>Modele : {{modele}}</p>
 <p>Numero de série : {{ns}}</p>
 
-<p>
---------------------------------
-</p>
-<p>
-AZERTY Solutions Informatiques
-</p>
-<p>
-38 rue de la station 95130, Franconville
-</p>
-<p>
-01.34.15.52.32
-</p>
+{% include 'emails/layout/footer.html.twig' %}
