--- a/templates/emails/mailEtat.html.twig
+++ b/templates/emails/mailEtat.html.twig
@@ -107,16 +107,5 @@
 	</div>
 </div>
 <div>
-	<p>
-		-----------------------------------------------
-	</p>
-	<p>
-		AZERTY Solutions Informatiques
-	</p>
-	<p>
-		38 rue de la station 95130, Franconville
-	</p>
-	<p>
-		01.34.15.52.32
-	</p>
+	{% include 'emails/layout/footer.html.twig' %}
 </div>
