--- a/templates/emails/redemande_rdv.html.twig
+++ b/templates/emails/redemande_rdv.html.twig
@@ -9,14 +9,4 @@
 <p>
    Si cette date vous convient merci de nous confirmer en cliquant <a href="https://site-interne.alwaysdata.net/rdv/public/{{id}}" target="_blank">ici</a> ou nous contacter le plus rapidement possible au 01.34.15.52.32
 </p>
---------------------------------
-</p>
-<p>
-AZERTY Solutions Informatiques
-</p>
-<p>
-38 rue de la station 95130, Franconville
-</p>
-<p>
-01.34.15.52.32
-</p>
+{% include 'emails/layout/footer.html.twig' %}
