add whats app in mail with logo

--- a/templates/emails/layout/footer.html.twig
+++ b/templates/emails/layout/footer.html.twig
@@ -8,5 +8,5 @@
     38 rue de la station 95130, Franconville
 </p>
 <p>
-    Appelez-nous au 01 34 15 52 32 ou envoyer nous un message sur <a href="https://api.whatsapp.com/send?phone=33661699422"> Whatsapp </a>
+    Appelez-nous au 01 34 15 52 32 ou envoyer nous un message sur  <a href="https://api.whatsapp.com/send?phone=33661699422"><img src="cid:whatsapp"  width="15px"></a>
 </p>
