--- a/templates/client/show_all.html.twig
+++ b/templates/client/show_all.html.twig
@@ -10,21 +10,7 @@
                 <div class="col" style="max-width: 300px !important">
                     <div class="card" >
                         <div class="card-body">
-                        <h5 class="card-title">Filtrer</h5>
-                        <div class="accordion accordion-flush" id="accordionFlushExample">
-                        <div class="accordion-item">
-                                <h2 class="accordion-header" id="flush-headingOne">
-                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                                    Mois
-                                </button>
-                                </h2>
-                                <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                                    <div class="accordion-body">
-                                        {{ include('client/_filtre_form.html.twig') }}
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                            <h5 class="card-title">Filtrer</h5>{{ include('client/filtre/_month_form.html.twig') }}
                     </div>
                 </div>
                 </div>
