--- a/templates/client/filtre/_month_form.html.twig
+++ b/templates/client/filtre/_month_form.html.twig
@@ -58,9 +58,10 @@
                 </div>
             </div>
         </div>
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-            Années
-        </button>
+        <h2 class="accordion-header" id="flush-headingTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                Années
+            </button>
         </h2>
         <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
             <div class="accordion-body">
@@ -75,6 +76,28 @@
                     <input type="checkbox" id="{{year}}" name="{{year}}"  value="{{year}}" {{checkedY}}>
                     <label for="{{year}}">{{year}}</label>
                 </div>
+            {% endfor %}
+            </div>
+        </div>
+        <h2 class="accordion-header" id="flush-headingTree">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTree" aria-expanded="false" aria-controls="flush-collapseTree">
+                Etat
+            </button>
+        </h2>
+        <div id="flush-collapseTree" class="accordion-collapse collapse" aria-labelledby="flush-headingTree" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">
+            {% for etat in etats %}
+                {% if etat.statut == '' %}
+                    <div>
+                        <input type="checkbox" id="{{etat.statut}}" name="{{etat.statut}}"  value="{{etat.statut}}">
+                        <label for="{{etat.statut}}">Sans statut</label>
+                    </div>
+                {% else %}
+                <div>
+                    <input type="checkbox" id="{{etat.statut}}" name="{{etat.statut}}"  value="{{etat.statut}}">
+                    <label for="{{etat.statut}}">{{etat.statut}}</label>
+                </div>
+                {% endif %}
             {% endfor %}
             </div>
         </div>
