do page edit rdv

--- a/templates/rdv/edit.html.twig
+++ b/templates/rdv/edit.html.twig
@@ -1,13 +1,23 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Rdv{% endblock %}
+{% block title %}Modifier l'intervention à domicile{% endblock %}
 
 {% block body %}
-    <h1>Edit Rdv</h1>
-
-    {{ include('rdv/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('app_rdv_index') }}">back to list</a>
-
-    {{ include('rdv/_delete_form.html.twig') }}
+    
+    {% include 'layout/navbar.html.twig' %}
+    
+    <div class="container-fluid">
+        <a  href="{{ path('app_rdv_index') }}"> <img class="retour" src="{{asset('./images/retour.png')}}"/> </a>
+        <h1>Modifier l'intervention à domicile</h1>
+    </div>
+    
+        <div class="container">
+                
+                
+                <div class="card p-50  mt-5 mb-5 cardRdvNew">
+                    {{ include('rdv/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
+                </div> 
+                <div class='loadingRdv' id="loadingRdv"> {{ include('layout/loader.html.twig') }} </div>
+    </div>
+    {% include 'layout/footer.html.twig' %}
 {% endblock %}
