--- a/templates/client/show_all.html.twig
+++ b/templates/client/show_all.html.twig
@@ -77,7 +77,7 @@
                         </tbody>
                     </table>
 
-                    <a  class="btn btn-success" href="{{ path('client_new') }}"><img class="delete" width='28px' src="{{asset('/images/icon-add.png')}}"/></a>
+                    <a  class="btn btn-success" href="{{ path('client_new') }}"><img class="delete" width='28px' src="{{asset('./images/icon-add.png')}}"/></a>
                 </div>
                 </div>
                 <div class='loaderAllClients'> {{ include('layout/loader.html.twig') }} </div>
