--- a/templates/rdv/client/new.html.twig
+++ b/templates/rdv/client/new.html.twig
@@ -10,7 +10,7 @@
         <h1 class="mt-3 mb-4">Demande de rendez-vous à domicile</h1>
     </div>
        <div class="card p-50  mt-5 cardRdvNew"  style="margin:auto">
-            {{ include('rdv/_form.html.twig') }}
+            {{ include('/rdv/_form.html.twig') }}
             
             {% for message in app.flashes('sucessRdv')%}
                 <div class="wrapper" id="sucessRdv"> 
