--- a/templates/rdv/index.html.twig
+++ b/templates/rdv/index.html.twig
@@ -70,9 +70,9 @@
                                     {{  rdv.date|date('d M Y H:i')|format_datetime('medium','short',locale='fr') }}
                                     {{ include('rdv/confirmation_form.html.twig') }}
                                     <button type="button" class="mr-2 btn btn-warning btn-orange right white" data-bs-toggle="modal" data-bs-target="#staticBackdrop{{rdv.id}}">
-                                        <img  width="20px"  class='suggestion' src="{{asset('/images/suggestion.png')}}"/>
+                                        <img  width="20px"  class='suggestion' src="{{asset('./images/suggestion.png')}}"/>
                                     </button>
-                                    <a class="btn btn-secondary right mr-2" href="{{ path('app_rdv_edit', {'id': rdv.id}) }}"  ><img class="edit" width='20px' src="{{asset('/images/icon-edit.png')}}"/></a>
+                                    <a class="btn btn-secondary right mr-2" href="{{ path('app_rdv_edit', {'id': rdv.id}) }}"  ><img class="edit" width='20px' src="{{asset('./images/icon-edit.png')}}"/></a>
                                     <div class="right"> {{ include('rdv/_delete_form.html.twig') }} </div>
                                     
                                 </div>
