--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -28,7 +28,7 @@
                             <td>{{ user.login }}</td>
                             <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
                             <td>
-                            <a class="btn btn-success" href="{{ path('user_show', {'id': user.id}) }}"><img class="show" width='25px' src="{{asset('/images/icon-afficher.png')}}"/></a>
+                            <a class="btn btn-success" href="{{ path('user_show', {'id': user.id}) }}"><img class="show" width='25px' src="{{asset('./images/icon-afficher.png')}}"/></a>
                             {{ include('user/_delete_form.html.twig') }}
                             </td>
                         </tr>
@@ -40,7 +40,7 @@
                 {% endfor %}
                 </tbody>
             </table>
-            <a  class="btn btn-success btn-lg" href="{{ path('user_new') }}"><img class="new" width='28px' src="{{asset('/images/icon-add.png')}}"/></a>
+            <a  class="btn btn-success btn-lg" href="{{ path('user_new') }}"><img class="new" width='28px' src="{{asset('./images/icon-add.png')}}"/></a>
 
         </div>
         {% include 'layout/footer.html.twig' %}
