resolved prblm images

--- a/templates/depot/index.html.twig
+++ b/templates/depot/index.html.twig
@@ -6,7 +6,7 @@
 
 {% block body %}
 	<div class="container-fluid mb-100">
-		<a  href="{{ relative_path('http://azertyfrance.fr') }}"> <img class="retour" src="{{asset('../images/retour.png')}}"/> </a>
+		<a  href="{{ relative_path('http://azertyfrance.fr') }}"> <img class="retour" src="{{asset('./images/retour.png')}}"/> </a>
 		<div id="hide">
 			<img class="img-center" src="{{asset('./images/azertylogo.png')}}"/>
 			<h1 class="mt-3">Formulaire de dépôt d’appareils informatiques</h1>
