--- a/templates/emails/redemande_client_rdv.html.twig
+++ b/templates/emails/redemande_client_rdv.html.twig
@@ -8,6 +8,6 @@
 </p>
 <p>
    Vous recevrez un mail sous peu de confirmation de ce rendez-vous de notre part ou une nouvelle suggestion de date. 
-   Si vous souhaitez annuler ou modifier cette intervention merci de vous rendre sur ce <a href="https://site-interne.alwaysdata.net/rdv/public/{{id}}" target="_blank" >lien</a> ou nous contacter le plus rapidement possible au 01.34.15.52.32
+   Si vous souhaitez annuler ou modifier cette intervention merci de vous rendre sur ce  {% include 'emails/layout/link.html.twig' %} lien</a> ou nous contacter le plus rapidement possible au 01.34.15.52.32
 </p>
 {% include 'emails/layout/footer.html.twig' %}
