--- a/templates/emails/confirmation_rdv.html.twig
+++ b/templates/emails/confirmation_rdv.html.twig
@@ -11,6 +11,6 @@
 </p>
 
 <p>
-    Si vous souhaitez annuler ou modifier cette intervention merci de vous rendre sur ce <a href="https://site-interne.alwaysdata.net/rdv/public/{{id}}"  target="_blank">lien</a> ou nous contacter le plus rapidement possible au 01.34.15.52.32
+    Si vous souhaitez annuler ou modifier cette intervention merci de vous rendre sur ce  {% include 'emails/layout/link.html.twig' %} lien</a> ou nous contacter le plus rapidement possible au 01.34.15.52.32
 </p>
 {% include 'emails/layout/footer.html.twig' %}
