--- a/templates/emails/redemande_rdv.html.twig
+++ b/templates/emails/redemande_rdv.html.twig
@@ -7,6 +7,6 @@
  <div style="font-size : 21 ; font-weight : bold; color : red;"> {{date|date('D d M Y H:i')|format_datetime('long','short',locale='fr')}}</div>  
 </p>
 <p>
-   Si cette date vous convient merci de nous confirmer en cliquant <a href="https://site-interne.alwaysdata.net/rdv/public/{{id}}" target="_blank">ici</a> ou nous contacter le plus rapidement possible au 01.34.15.52.32
+   Si cette date vous convient merci de nous confirmer en cliquant {% include 'emails/layout/link.html.twig' %} ici</a> ou nous contacter le plus rapidement possible au 01.34.15.52.32
 </p>
 {% include 'emails/layout/footer.html.twig' %}
