--- a/templates/rdv/client/new.html.twig
+++ b/templates/rdv/client/new.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 <div class="container-fluid mb-100">
-    <a  href="{{ relative_path('http://azertyfrance.fr') }}"> <img class="retour" src="{{asset('../images/retour.png')}}"/> </a>
+    <a  href="{{ relative_path('http://azertyfrance.fr') }}"> <img class="retour" src="{{asset('./images/retour.png')}}"/> </a>
     <div id="hideRdv">
         <img class="img-center" src="{{asset('./images/azertylogo.png')}}"/>
         <h1 class="mt-3 mb-4">Demande de rendez-vous à domicile</h1>
