add disign in suivie client

--- a/templates/emails/mailEtat.html.twig
+++ b/templates/emails/mailEtat.html.twig
@@ -1,10 +1,10 @@
 <img src="cid:asi">
 <h3>Merci de nous faire confiance</h3>
 
-<p>Bonjour,
+<p>Bonjour
 	{{personne}}
-	{{nom}}
 	{{prenom}}
+	{{nom}},
 </p>
 {% if etat == 'Pris en charge' %}
 	<p>
