--- a/templates/client/index.html.twig
+++ b/templates/client/index.html.twig
@@ -48,7 +48,7 @@
                         <td>  <img  class='cross' src="{{asset('./images/cross.png')}}" width="40px" /></td>
                         {% endif %}
                         {% if client.appareil.editeur.etat.statut is defined %}
-                        <td>{{ client.appareil.editeur.etat.statut}}</td>
+                            <td class='statutAppareil'>{{ client.appareil.editeur.etat.statut}}</td>
                         {% else %}
                         <td>  </td>
                         {% endif %}
