--- a/public/css/interne/client/index.css
+++ b/public/css/interne/client/index.css
@@ -1,6 +1,6 @@
 .client_livrate{
      opacity: 0.33;
 }
-.statutAppareil .alert-success{
-   background-color: #116c11 !important;
+.td-date{
+   min-width: 100px;
 }
