--- a/templates/client/show.html.twig
+++ b/templates/client/show.html.twig
@@ -147,27 +147,7 @@
                     </tr>
                 </thead>
                 <tbody class='form'>
-                  {{ form_start(form)}}
-                    <tr class='tr_no_color  select'>
-                        <th><label for="user">Editeur</label></th>
-                        <td>{{form_widget(form.user, { 'attr': { 'class' : 'form-select form-select-sm', 'id':'user' } })}}</td>
-                    </tr>
-                    <tr class='tr_color select'>
-                        <th><label for="etat">Etat</label></th>
-                        <td>{{form_widget(form.etat, { 'attr': { 'class' : 'form-select form-select-sm', 'id':'etat' } })}}</td>
-                    </tr>
-                    <tr class='tr_no_color select'>
-                        <th><label for="mail">Informer le client</label></th>
-                        <td> {{form_widget(form.mail,{'attr':{'class' :'switch-custom' ,'id':'mail'} })}}</td>
-                    </tr>
-                    <tr class='tr_color select'> 
-                        <th></th>
-                        <td><button class='btn btn-success btn-form'>
-                            <img class="edit" width='25px' src="{{asset('./images/icon-check.png')}}"/>
-                        </button></td>
-                    </tr>
-                    
-                     {{ form_end(form) }}
+                    {{ include('client/etat/etat.html.twig') }}
                 </tbody>
             </table>
 
@@ -215,6 +195,7 @@
         <a class="btn btn-warning btn-lg" href="{{ path('prioritaire_new', {'id': appareil.id}) }}"><img class="edit" width='25px' src="{{asset('./images/icon-important.png')}}"/></a>
         <a class="btn btn-primary btn-lg" href="{{ path('client_edit', {'id': client.id}) }}"><img class="edit" width='25px' src="{{asset('./images/icon-edit.png')}}"/></a>
         <a class="btn btn-dark btn-lg" href="{{ path('tache_new', {'id': appareil.id}) }}"><img class="edit" width='25px' src="{{asset('./images/icon-add-entretien.png')}}"/></a>
+        <a class="btn btn-info" href="{{ path('client_clone', {'id': client.id}) }}"><img class="cloner" width='25px' src="{{asset('./images/icon-cloner.png')}}"/></a>
         {{ include('client/_delete_form.html.twig') }}
     </div>
     
