--- a/templates/client/index.html.twig
+++ b/templates/client/index.html.twig
@@ -65,12 +65,12 @@
                             <a class="btn btn-success"href="{{ path('client_show', {'id': client.id}) }}"><img class="show" width='25px' src="{{asset('./images/icon-afficher.png')}}"/></a>
                             <a class="btn btn-secondary"href="{{ path('client_edit', {'id': client.id}) }}"><img class="edit" width='25px' src="{{asset('./images/icon-edit.png')}}"/></a>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#cardClient{{client.id}}">
-                                E
+                                <i  width='25%' class="bi bi-person-bounding-box show-info-client"></i>
                             </button>
-                            {{ include('client/modal/modal.html.twig') }}
                             {{ include('client/_delete_form.html.twig') }}
                         </td>
                     </tr>
+                {{ include('client/modal/modal.html.twig') }}
                 {% else %}
                     <tr >
                         <td colspan="12" class='white'>En attente de clients...</td>
