--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -34,3 +34,4 @@
 	@import url("public/layout/footer.css");
 /*base*/
 @import url("base.css");
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css");
