--- a/templates/layout/footer.html.twig
+++ b/templates/layout/footer.html.twig
@@ -1,5 +1,5 @@
 <footer class="footer mt-auto py-3 bg-dark">
   <div class="container">
-    <span class="text-muted">&copy; 2022 <a href='#'>AZERTY Solutions informatiques</a></span>
+    <span class="text-muted">&copy; 2022 <a href='#'>AZERTY Solutions Informatiques</a></span>
   </div>
 </footer>
