disigned modal in index client & disigned again show all client

--- a/public/css/interne/client/index.css
+++ b/public/css/interne/client/index.css
@@ -25,3 +25,22 @@
 .jc{
    justify-content: center;
 }
+.card-modal-header-client {
+   text-align: center;
+   color: white !important;
+ }
+ .check-modal {
+   font-size: 25px;
+   color: #2bf52b;
+  
+ }
+.cross-modal{
+   font-size: 25px;
+   color: #ffffff;
+  
+}
+.badge-statut-appareil{
+   display: inline-block;
+   color: #fff;
+   text-align: center;
+}
