--- a/templates/client/show_all.html.twig
+++ b/templates/client/show_all.html.twig
@@ -41,7 +41,7 @@
                             {% else %}
                                 <tr class='tr_color  select'>
                             {% endif %}
-                                <td>{{ client.date|date('D d M Y H:i')|format_datetime('medium','short',locale='fr') }}</td>
+                                <td>{{ client.date|date('D d M')|format_datetime('medium','none',locale='fr') }}</td>
                                 <td>{{ client.personne }}</td>
                                 <td>{{ client.nom }}</td>
                                 <td>{{ client.prenom }}</td>
@@ -56,16 +56,16 @@
                                 <td>  <img  class='cross' src="{{asset('./images/cross.png')}}" width="40px"/></td>
                                 {% endif %}
                                 {% if client.appareil.editeur.etat.statut is defined %}
-                                <td>{{ client.appareil.editeur.etat.statut}}</td>
+                                <td class='statutAppareilAll'> 
+                                    <span class="badge badge-statut-appareil" style="font-size:16px"> {{ client.appareil.editeur.etat.statut}} </span>
+                                </td>
                                 {% else %}
                                 <td>  </td>
                                 {% endif %}
                                 
 
-                                <td class="td-button mw-250">
+                                <td class="td-button">
                                     <a class="btn btn-success" href="{{ path('client_show', {'id': client.id}) }}"><img class="show" width='25px' src="{{asset('./images/icon-afficher.png')}}"/></a>
-                                    <a class="btn btn-secondary" href="{{ path('client_edit', {'id': client.id}) }}"><img class="edit" width='25px' src="{{asset('./images/icon-edit.png')}}"/></a>
-                                    <a class="btn btn-info" href="{{ path('client_clone', {'id': client.id}) }}"><img class="edit" width='25px' src="{{asset('./images/icon-cloner.png')}}"/></a>
                                     {{ include('client/_delete_form.html.twig') }}
                                 </td>
                             </tr>
