--- a/templates/client/index.html.twig
+++ b/templates/client/index.html.twig
@@ -62,7 +62,7 @@
                         <td>  </td>
                         {% endif %}
                         <td class="inline-button mw-250">
-                            <a class="btn btn-success"href="{{ path('client_show', {'id': client.id}) }}"><img class="show" width='25px' src="{{asset('./images/icon-afficher.png')}}"/></a>
+                            <a class="btn btn-success" href="{{ path('client_show', {'id': client.id}) }}"><img class="show" width='25px' src="{{asset('./images/icon-afficher.png')}}"/></a>
                             <a class="btn btn-secondary"href="{{ path('client_edit', {'id': client.id}) }}"><img class="edit" width='25px' src="{{asset('./images/icon-edit.png')}}"/></a>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#cardClient{{client.id}}">
                                 <i  width='25%' class="bi bi-person-bounding-box show-info-client"></i>
@@ -70,12 +70,14 @@
                             {{ include('client/_delete_form.html.twig') }}
                         </td>
                     </tr>
-                {{ include('client/modal/modal.html.twig') }}
+                <div class='pop-up'>
+                    {{ include('client/modal/modal.html.twig') }}
+                </div class='pop-up'>
                 {% else %}
                     <tr >
                         <td colspan="12" class='white'>En attente de clients...</td>
                     </tr>
-                    {% endfor %}
+                {% endfor %}
                 </tbody>
             </table>
             <a  class="btn btn-success btn-lg" href="{{ path('client_new') }}"><img class="delete" width='28px' src="{{asset('./images/icon-add.png')}}"/></a>
